--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,47 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Đấu trường Lục giác</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PlayHex</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
     <style>
         body {
+            background-color: #2f2f2f; /* Dark background like in the image */
+            color: white;
             font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #f0f0f0;
             margin: 0;
             padding: 20px;
         }
         canvas {
-            border: 2px solid #333;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: block;
+            margin: 0 auto;
         }
-        #status {
-            font-size: 24px;
-            color: #333;
-            margin-top: 15px;
-            font-weight: bold;
+        #turn-indicator {
+            text-align: center;
+            font-size: 20px;
+            margin-top: 10px;
         }
-        button {
-            margin-top: 15px;
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
+        h3 {
+            margin: 0;
+            font-size: 18px;
+            color: #888;
         }
     </style>
 </head>
 <body>
-<canvas id="gameCanvas" width="800" height="600"></canvas>
-<div id="status">Lượt của người chơi 1 (Đỏ)</div>
-<button onclick="resetGame()">Chơi lại</button>
-<script src="game.js"></script>
+<h3>PlayHex</h3>
+<div id="turn-indicator"></div>
+<script src="sketch.js"></script>
 </body>
 </html>
