--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -50,7 +50,9 @@
 <body>
 <h3>PlayHex</h3>
 <div id="turn-indicator"></div>
-<button class="button" onclick="callResetAPI()">Reset</button>
+<div><button class="button" onclick="callResetAPI()">Reset</button></div>
+<div><button id="swap-button" class="button" onclick="callSwapAPI()">Swap</button>
+</div>
 <script src="sketch.js"></script>
 </body>
 </html>
