add HexAI.java and ai_game.html

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -39,7 +39,7 @@
     }
 
     function playWithAI() {
-        alert("Chế độ chơi với AI chưa được triển khai.");
+        window.location.href = "ai_game.html";
     }
 
     function playWithFriend() {
