--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,6 +10,7 @@
             background-color: #2f2f2f; /* Dark background like in the image */
             color: white;
             font-family: Arial, sans-serif;
+            position: relative; /* Thêm dòng này */
             margin: 0;
             padding: 20px;
         }
@@ -27,6 +28,16 @@
             font-size: 18px;
             color: #888;
         }
+        .button-container {
+            display: flex;
+            gap: 10px;
+            margin-top: 20px; /* Khoảng cách với board game */
+            justify-content: center; /* Căn giữa các nút */
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
         .button {
             background-color: #007BFF; /* Màu nền nút */
             border: none;
@@ -36,7 +47,7 @@
             text-decoration: none;
             display: inline-block;
             font-size: 16px;
-            margin: 4px 2px;
+            margin: 10px 40px;
             cursor: pointer;
             border-radius: 8px; /* Bo góc */
             transition: background-color 0.3s, transform 0.3s; /* Hiệu ứng chuyển đổi */
@@ -50,8 +61,12 @@
 <body>
 <h3>PlayHex</h3>
 <div id="turn-indicator"></div>
-<div><button class="button" onclick="callResetAPI()">Reset</button></div>
-<div><button id="swap-button" class="button" onclick="callSwapAPI()">Swap</button>
+
+<div class="button-container">
+    <button class="button" onclick="callResetAPI()">Reset</button>
+    <button id="swap-button" class="button" onclick="callSwapAPI()">Swap</button>
+</div>
+
 </div>
 <script src="sketch.js"></script>
 </body>
