bugfix: change UI to white

--- a/src/main/resources/static/ai_game.html
+++ b/src/main/resources/static/ai_game.html
@@ -7,7 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
   <style>
     body {
-      background-color: #2f2f2f; /* Dark background like in the image */
+      background-color: #FFFFFF; /* Dark background like in the image */
       color: white;
       font-family: Arial, sans-serif;
       position: relative; /* Thêm dòng này */
