--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -4,38 +4,146 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đấu Trường Lục Giác</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+    <link href="style.css">
+    <style>
+        body {
+            background: linear-gradient(to bottom, #1a273b, #324963);
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+            padding: 0;
+            color: #ffffff;
+            background-size: cover;
+            background-attachment: fixed;
+        }
+        .container {
+            text-align: center;
+            padding: 60px 20px;
+        }
+        .title {
+            font-size: 3.5rem;
+            font-weight: 700;
+            text-transform: uppercase;
+            text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.7);
+            color: #ffcc00;
+        }
+        .button-group {
+            display: flex;
+            flex-direction: column; /* Xếp các nút theo chiều dọc */
+            align-items: center;    /* Căn giữa các nút */
+            gap: 20px;              /* Khoảng cách giữa các nút */
+            margin-top: 30px;
+        }
+        .menu-button {
+            background: linear-gradient(to right, #ffcc00, #ff9900);
+            color: #000000;
+            padding: 15px 40px;
+            border: none;
+            border-radius: 50px;
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin: 15px;
+            cursor: pointer;
+            box-shadow: 0 8px 20px rgba(255, 153, 0, 0.5);
+            transition: all 0.4s ease;
+        }
+        .menu-button:hover {
+            background: linear-gradient(to right, #ff9900, #ffcc00);
+            transform: scale(1.1);
+        }
+        .dialog {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        .dialog.hidden {
+            display: none;
+        }
+        .dialog-content {
+            background: linear-gradient(to bottom, #ffffff, #dddddd);
+            color: #000000;
+            border-radius: 20px;
+            padding: 30px;
+            width: 90%;
+            max-width: 600px;
+            text-align: center;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
+            animation: fadeIn 0.5s ease;
+        }
+        .dialog-content h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            color: #ff9900;
+        }
+        .dialog-content p {
+            margin-bottom: 15px;
+            font-size: 1.2rem;
+        }
+        .dialog-content button {
+            background: linear-gradient(to right, #243b55, #141e30);
+            color: #ffffff;
+            padding: 10px 25px;
+            border: none;
+            border-radius: 15px;
+            font-size: 1.2rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        .dialog-content button:hover {
+            background: linear-gradient(to right, #141e30, #243b55);
+            transform: scale(1.1);
+        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
 </head>
 <body>
 <div class="container">
-    <h1>ĐẤU TRƯỜNG LỤC GIÁC</h1>
-    <button onclick="showRules()">LUẬT CHƠI</button>
-    <button onclick="playWithAI()">CHƠI VỚI AI</button>
-    <button onclick="playWithFriend()">CHƠI VỚI BẠN</button>
+    <h1 class="title">ĐẤU TRƯỜNG LỤC GIÁC</h1>
+    <div class="button-group">
+        <button class="menu-button" onclick="showRules()">📜 LUẬT CHƠI</button>
+        <button class="menu-button" onclick="playWithAI()">🤖 CHƠI VỚI AI</button>
+        <button class="menu-button" onclick="playWithFriend()">👫 CHƠI VỚI BẠN</button>
+    </div>
 </div>
 
-<!-- Dialog hiển thị luật chơi (Mặc định ẩn) -->
-<div id="rulesDialog" class="dialog">
+<div id="rulesDialog" class="dialog hidden">
     <div class="dialog-content">
-        <h2>LUẬT CHƠI </h2>
-        <h2>ĐẤU TRƯỜNG LỤC GIÁC</h2>
+        <h2>LUẬT CHƠI</h2>
         <p>- Trò chơi gồm hai người tham gia, mỗi người được gán một màu: Đỏ và Xanh lam.</p>
         <p>- Mỗi người chơi sở hữu hai cạnh đối diện của bàn cờ hình thoi.</p>
         <p>- Người chơi luân phiên đặt một viên đá có màu của mình vào một ô trống trên bàn cờ.</p>
         <p>- Người đi trước thường là Đỏ. Khi đã đặt viên đá xuống, không thể di chuyển, thay thế hoặc loại bỏ.</p>
-        <p>- Trò chơi có Luật Đổi Lượt (Swap Rule), cho phép người chơi thứ hai hoán đổi màu sau nước đi đầu tiên để đảm bảo công bằng.</p>
-        <p>- <b>Điều kiện chiến thắng:</b> Người chơi chiến thắng khi tạo được một đường liền mạch kết nối hai cạnh bàn cờ của mình.</p>
+        <p>- Có Luật Đổi Lượt (Swap Rule), cho phép người chơi thứ hai hoán đổi màu sau nước đi đầu tiên để đảm bảo công bằng.</p>
+        <p><strong>🏆 Điều kiện chiến thắng:</strong> Tạo đường liền mạch kết nối hai cạnh bàn cờ của mình.</p>
         <button onclick="closeRules()">Trở lại</button>
     </div>
 </div>
 
 <script>
     function showRules() {
-        document.getElementById("rulesDialog").style.display = "flex";
+        document.getElementById("rulesDialog").classList.remove("hidden");
     }
 
     function closeRules() {
-        document.getElementById("rulesDialog").style.display = "none";
+        document.getElementById("rulesDialog").classList.add("hidden");
     }
 
     function playWithAI() {
