--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,41 +7,47 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
     <style>
         body {
-            background-color: #2f2f2f; /* Dark background like in the image */
+            background-color: white;
             color: white;
             font-family: Arial, sans-serif;
-            position: relative; /* Thêm dòng này */
+            position: relative;
             margin: 0;
             padding: 20px;
         }
+
         canvas {
             display: block;
             margin: 0 auto;
+            background-color: white;
         }
+
         #turn-indicator {
             text-align: center;
             font-size: 20px;
             margin-top: 10px;
         }
+
         h3 {
             margin: 0;
             font-size: 18px;
             color: #888;
         }
+
         .button-container {
             display: flex;
             gap: 10px;
-            margin-top: 20px; /* Khoảng cách với board game */
-            justify-content: center; /* Căn giữa các nút */
+            margin-top: 20px;
+            justify-content: center;
             position: absolute;
             bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
         }
+
         .button {
-            background-color: #007BFF; /* Màu nền nút */
+            background-color: #007BFF;
             border: none;
-            color: white; /* Màu chữ */
+            color: white;
             padding: 10px 20px;
             text-align: center;
             text-decoration: none;
@@ -49,25 +55,33 @@
             font-size: 16px;
             margin: 10px 40px;
             cursor: pointer;
-            border-radius: 8px; /* Bo góc */
-            transition: background-color 0.3s, transform 0.3s; /* Hiệu ứng chuyển đổi */
+            border-radius: 8px;
+            transition: background-color 0.3s, transform 0.3s;
         }
+
         .button:hover {
-            background-color: #0056b3; /* Màu nền khi hover */
-            transform: scale(1.1); /* Phóng to khi hover */
+            background-color: #0056b3;
+            transform: scale(1.1);
         }
+
     </style>
 </head>
 <body>
-<h3>PlayHex</h3>
-<div id="turn-indicator"></div>
+
+<h3 onclick="goHome()">PlayHex</h3>
+<div id="turn-indicator" ></div>
 
 <div class="button-container">
     <button class="button" onclick="callResetAPI()">Reset</button>
     <button id="swap-button" class="button" onclick="callSwapAPI()">Swap</button>
 </div>
 
-</div>
 <script src="sketch.js"></script>
+<script>
+    function goHome() {
+        window.location.href = "home.html"; // Thay đường dẫn nếu cần
+    }
+</script>
 </body>
+
 </html>
