--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -8,11 +8,11 @@
     <link href="style.css">
     <style>
         body {
-            background: linear-gradient(to bottom, #1a273b, #324963);
+            background: linear-gradient(to bottom, #a8edea, #fdfbfb); /* Gradient xanh pastel nhạt sang trắng */
             font-family: 'Montserrat', sans-serif;
             margin: 0;
             padding: 0;
-            color: #ffffff;
+            color: #003b57; /* Chữ tối hơn để tạo sự nổi bật */
             background-size: cover;
             background-attachment: fixed;
         }
@@ -24,32 +24,33 @@
             font-size: 3.5rem;
             font-weight: 700;
             text-transform: uppercase;
-            text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.7);
-            color: #ffcc00;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Bóng nhẹ hơn cho nền sáng */
+            color: #333333; /* Màu tiêu đề tối hơn */
         }
         .button-group {
             display: flex;
-            flex-direction: column; /* Xếp các nút theo chiều dọc */
-            align-items: center;    /* Căn giữa các nút */
-            gap: 20px;              /* Khoảng cách giữa các nút */
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
             margin-top: 30px;
         }
         .menu-button {
-            background: linear-gradient(to right, #ffcc00, #ff9900);
-            color: #000000;
+            background: linear-gradient(to right, #66ccff, #b3ffff); /* Gradient xanh lam nhạt sang xanh lá pastel */
+            color: #003b57; /* Chữ màu trắng nổi bật */
             padding: 15px 40px;
-            border: none;
+            border: 1px solid rgba(102, 204, 255, 0.5); /* Viền mềm mại */
             border-radius: 50px;
             font-size: 1.5rem;
             font-weight: 600;
             margin: 15px;
             cursor: pointer;
-            box-shadow: 0 8px 20px rgba(255, 153, 0, 0.5);
+            box-shadow: 0 4px 15px rgba(102, 204, 255, 0.5); /* Hiệu ứng nổi */
             transition: all 0.4s ease;
         }
         .menu-button:hover {
-            background: linear-gradient(to right, #ff9900, #ffcc00);
-            transform: scale(1.1);
+            background: linear-gradient(to right, #b3ffff, #66ccff); /* Đổi hướng gradient khi hover */
+            transform: scale(1.05); /* Phóng to nhẹ */
+            box-shadow: 0 8px 20px rgba(102, 204, 255, 0.75); /* Tăng hiệu ứng nổi */
         }
         .dialog {
             position: fixed;
@@ -81,7 +82,7 @@
             font-size: 2.5rem;
             margin-bottom: 20px;
             text-transform: uppercase;
-            color: #ff9900;
+            color: #003b57;
         }
         .dialog-content p {
             margin-bottom: 15px;
