--- a/src/main/resources/static/ai_game.html
+++ b/src/main/resources/static/ai_game.html
@@ -92,9 +92,18 @@
 </div>
 <script src="ai_play.js"></script>
 <script>
+
   function goHome() {
     window.location.href = "home.html"; // Điều hướng đến trang home.html
   }
+  window.addEventListener('DOMContentLoaded', () => {
+    const swapButton = document.getElementById("swap-button");
+    if (swapButton) {
+      swapButton.disabled = true;
+      swapButton.style.opacity = "0.5";
+    }
+  });
+
 </script>
 </body>
 </html>
